<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".SplashActivity"
    android:background="@drawable/gradient_bg">
    <ImageView
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_details"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>
</LinearLayout>